feat: keepalive per-app toggles - independent checkboxes for self/alipay/wechat with PID display
Made-with: Cursor