@@ -7,13 +7,17 @@ import android.content.Context;
 import android.content.Intent;
 import android.content.pm.PackageManager;
 import android.os.Build;
+import android.os.Handler;
+import android.os.Looper;
 import android.provider.Settings;
 import android.util.Log;
 
 import java.io.BufferedReader;
-import java.io.DataOutputStream;
 import java.io.InputStreamReader;
 import java.util.List;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 public class AppRunningUtil {
 
@@ -29,6 +33,10 @@ public class AppRunningUtil {
     public static final int STATUS_UNKNOWN = -1;
 
     private static Boolean sHasRoot = null;
+
+    public interface RootCallback {
+        void onResult(boolean hasRoot);
+    }
 
     public static boolean isAppInstalled(Context context, String packageName) {
         try {
@@ -49,7 +57,7 @@ public class AppRunningUtil {
             return STATUS_NOT_INSTALLED;
         }
 
-        if (hasRootAccess()) {
+        if (isRootGranted()) {
             return isProcessAliveRoot(packageName)
                     ? STATUS_RECENTLY_ACTIVE
                     : STATUS_INSTALLED_INACTIVE;
@@ -70,23 +78,78 @@ public class AppRunningUtil {
     }
 
     // -------------------------------------------------------------------------
-    // Root 相关
+    // Root
     // -------------------------------------------------------------------------
 
-    public static boolean hasRootAccess() {
-        if (sHasRoot != null) return sHasRoot;
+    /** 返回缓存的 root 状态（不触发 su 请求） */
+    public static boolean isRootGranted() {
+        return sHasRoot != null && sHasRoot;
+    }
+
+    /**
+     * 异步请求 root 权限，给 Magisk 足够时间弹出授权对话框。
+     * 超时 15 秒（用户需要在 Magisk 弹窗中点击允许）。
+     */
+    public static void requestRootAsync(final RootCallback callback) {
+        new Thread(new Runnable() {
+            @Override
+            public void run() {
+                final boolean result = checkRootBlocking(15);
+                sHasRoot = result;
+                new Handler(Looper.getMainLooper()).post(new Runnable() {
+                    @Override
+                    public void run() {
+                        callback.onResult(result);
+                    }
+                });
+            }
+        }).start();
+    }
+
+    /**
+     * 阻塞式 root 检测，等待指定秒数让 Magisk 弹窗。
+     */
+    private static boolean checkRootBlocking(int timeoutSeconds) {
         try {
-            Process p = Runtime.getRuntime().exec("su -c id");
-            BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
-            String line = reader.readLine();
-            p.waitFor();
-            reader.close();
-            sHasRoot = (line != null && line.contains("uid=0"));
+            Process p = Runtime.getRuntime().exec(new String[]{"su", "-c", "id"});
+            final AtomicBoolean finished = new AtomicBoolean(false);
+            final CountDownLatch latch = new CountDownLatch(1);
+            final StringBuilder output = new StringBuilder();
+
+            Thread reader = new Thread(new Runnable() {
+                @Override
+                public void run() {
+                    try {
+                        BufferedReader br = new BufferedReader(
+                                new InputStreamReader(p.getInputStream()));
+                        String line;
+                        while ((line = br.readLine()) != null) {
+                            output.append(line);
+                        }
+                        br.close();
+                    } catch (Exception ignored) {
+                    }
+                    latch.countDown();
+                }
+            });
+            reader.start();
+
+            boolean completed = p.waitFor(timeoutSeconds, TimeUnit.SECONDS);
+            if (!completed) {
+                p.destroyForcibly();
+                Log.w(TAG, "su request timed out after " + timeoutSeconds + "s");
+                return false;
+            }
+
+            latch.await(2, TimeUnit.SECONDS);
+            String result = output.toString();
+            boolean hasRoot = result.contains("uid=0");
+            Log.d(TAG, "root check result: " + result + " -> " + hasRoot);
+            return hasRoot;
         } catch (Exception e) {
-            sHasRoot = false;
+            Log.w(TAG, "root check failed", e);
+            return false;
         }
-        Log.d(TAG, "hasRootAccess: " + sHasRoot);
-        return sHasRoot;
     }
 
     /** 通过 root 执行 pidof 检测进程是否存活 */
@@ -95,7 +158,7 @@ public class AppRunningUtil {
             Process p = Runtime.getRuntime().exec(new String[]{"su", "-c", "pidof " + packageName});
             BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
             String line = reader.readLine();
-            p.waitFor();
+            p.waitFor(3, TimeUnit.SECONDS);
             reader.close();
             return line != null && !line.trim().isEmpty();
         } catch (Exception e) {
@@ -104,7 +167,7 @@ public class AppRunningUtil {
         }
     }
 
-    /** 通过 root 启动指定 App 的 Launch Activity */
+    /** 通过 root 启动指定 App */
     public static boolean launchAppRoot(Context context, String packageName) {
         try {
             PackageManager pm = context.getPackageManager();
@@ -113,7 +176,7 @@ public class AppRunningUtil {
             String component = launchIntent.getComponent().flattenToShortString();
             Process p = Runtime.getRuntime().exec(new String[]{
                     "su", "-c", "am start -n " + component});
-            p.waitFor();
+            p.waitFor(5, TimeUnit.SECONDS);
             return p.exitValue() == 0;
         } catch (Exception e) {
             Log.w(TAG, "launchAppRoot failed", e);
@@ -121,13 +184,107 @@ public class AppRunningUtil {
         }
     }
 
-    /** 重置 root 检测缓存（换设备/刷机后可调用） */
+    /**
+     * 通过 root 读取系统通知记录中的支付相关通知。
+     * 使用 dumpsys notification --noredact 获取完整通知内容。
+     */
+    public static String readPaymentNotifications() {
+        if (!isRootGranted()) return null;
+        try {
+            Process p = Runtime.getRuntime().exec(new String[]{
+                    "su", "-c", "dumpsys notification --noredact"});
+            BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
+            StringBuilder sb = new StringBuilder();
+            String line;
+            boolean inPaymentSection = false;
+            while ((line = reader.readLine()) != null) {
+                if (line.contains("com.eg.android.AlipayGphone")
+                        || line.contains("com.tencent.mm")
+                        || line.contains("com.unionpay")) {
+                    inPaymentSection = true;
+                }
+                if (inPaymentSection) {
+                    sb.append(line).append("\n");
+                    if (line.trim().isEmpty() || line.contains("NotificationRecord")) {
+                        inPaymentSection = false;
+                    }
+                }
+            }
+            p.waitFor(5, TimeUnit.SECONDS);
+            reader.close();
+            return sb.length() > 0 ? sb.toString() : null;
+        } catch (Exception e) {
+            Log.w(TAG, "readPaymentNotifications failed", e);
+            return null;
+        }
+    }
+
+    /** 获取进程 PID，未运行返回 null */
+    public static String getProcessPid(String packageName) {
+        if (!isRootGranted()) return null;
+        try {
+            Process p = Runtime.getRuntime().exec(new String[]{"su", "-c", "pidof " + packageName});
+            BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
+            String line = reader.readLine();
+            p.waitFor(3, TimeUnit.SECONDS);
+            reader.close();
+            if (line != null && !line.trim().isEmpty()) {
+                return line.trim().split("\\s+")[0];
+            }
+        } catch (Exception e) {
+            Log.w(TAG, "getProcessPid failed", e);
+        }
+        return null;
+    }
+
+    /**
+     * 通过 root 设置进程 oom_score_adj 为 -1000，防止系统回收。
+     * @return 成功保活的 PID，失败返回 null
+     */
+    public static String keepAlive(String packageName) {
+        if (!isRootGranted()) return null;
+        try {
+            String pid = getProcessPid(packageName);
+            if (pid == null) return null;
+
+            Process adjProc = Runtime.getRuntime().exec(new String[]{
+                    "su", "-c", "echo -1000 > /proc/" + pid + "/oom_score_adj"});
+            adjProc.waitFor(3, TimeUnit.SECONDS);
+
+            if (adjProc.exitValue() == 0) {
+                Log.d(TAG, "keepAlive: " + packageName + " pid=" + pid + " oom_score_adj=-1000");
+                return pid;
+            }
+        } catch (Exception e) {
+            Log.w(TAG, "keepAlive failed for " + packageName, e);
+        }
+        return null;
+    }
+
+    public static final String PKG_SELF = "com.weihuagu.receiptnotice";
+    public static final String PREF_KA_SELF = "keepalive_self";
+    public static final String PREF_KA_ALIPAY = "keepalive_alipay";
+    public static final String PREF_KA_WECHAT = "keepalive_wechat";
+
+    /**
+     * 按需保活选中的应用。
+     * @return 三个位置分别对应 自身/支付宝/微信 的 PID（未选中或未运行为 null）
+     */
+    public static String[] keepSelectedAlive(boolean self, boolean alipay, boolean wechat) {
+        String[] pids = new String[3];
+        if (self)   pids[0] = keepAlive(PKG_SELF);
+        if (alipay) pids[1] = keepAlive(PKG_ALIPAY);
+        if (wechat) pids[2] = keepAlive(PKG_WECHAT);
+        return pids;
+    }
+
+    /** 重置 root 缓存 */
     public static void resetRootCache() {
         sHasRoot = null;
     }
 
     // -------------------------------------------------------------------------
-    // 非 root 回退方案
+    // 非 root 回退
     // -------------------------------------------------------------------------
 
     public static boolean hasUsageStatsPermission(Context context) {
@@ -156,7 +313,6 @@ public class AppRunningUtil {
             UsageStatsManager usm = (UsageStatsManager)
                     context.getSystemService(Context.USAGE_STATS_SERVICE);
             if (usm == null) return false;
-
             long now = System.currentTimeMillis();
             long windowMs = minutes * 60_000L;
             List<UsageStats> stats = usm.queryUsageStats(
@@ -180,7 +336,6 @@ public class AppRunningUtil {
         ActivityManager am = (ActivityManager)
                 context.getSystemService(Context.ACTIVITY_SERVICE);
         if (am == null) return false;
-
         List<ActivityManager.RunningAppProcessInfo> processes = am.getRunningAppProcesses();
         if (processes != null) {
             for (ActivityManager.RunningAppProcessInfo p : processes) {
